Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.13, 6.0.0, 6.0.1
-
None
-
-
2
-
6e6202bf5ef80c6b2bbeffa3b90435c146a52094 (qt/qtbase/dev)
-
Da Vinci sprint 33, Da Vinci sprint 37
Description
QEvent::Quit is not listed on the documentation page of QEvent (https://doc.qt.io/qt-6/qevent.html#Type-enum).
I don't think this was ever the case, but since Qt 6 sends QEvent::Quit (this was QEvent::Close in 5.13) to QtApplication when quit is invoked by right clicking the application icon in the dock on macOS I think this lack has become a problem.
Attachments
For Gerrit Dashboard: QTBUG-92122 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
348314,2 | Doc: Add QEvent::Quit to the list of enum values | dev | qt/qtbase | Status: MERGED | +2 | 0 |