Doc: Add QEvent::Quit to the list of enum values

Fixes: QTBUG-92122
Change-Id: I3d23c9ea50011bb6f8fdaba8aed7c940300813ed
Reviewed-by: Paul Wicking <paul.wicking@qt.io>